# DocChat

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
DocChat/: Procfile  example_env  manage.py  mydatabase  requirements.txt
DocChat/DocChat/: asgi.py  settings.py  urls.py  wsgi.py
DocChat/chat/: apps.py  forms.py  models.py  urls.py  views.py
DocChat/chat/migrations/: 0001_initial.py  0002_userfile_title.py  0003_message_answer_alter_chat_title.py
DocChat/chat/templates/chat/: base.html  chat.html  chat_list.html  error_filename.html  error_format.html  error_size_file.html  home.html  upload_file.html
DocChat/chat/templates/registration/: login.html  sign-up.html
DocChat/static/: style.css
DocChat/users/: apps.py  backends.py  decorators.py  forms.py  models.py  tokens.py  urls.py  views.py
DocChat/users/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_alter_user_managers.py  0004_alter_user_managers_alter_user_id.py
DocChat/users/templates/: template_activate_account.html  template_reset_password.html
DocChat/users/templates/registration/: login.html  password_reset.html
DocChat/users/templates/users/: delete_user_confirm.html  login.html  logout.html  message_to_email.html  password_reset.html  password_reset_confirm.html  register.html
