[tool.poetry]
name = "docchat"
version = "0.1.0"
description = ""
authors = ["egorshanin21 <egorshanin21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
django = "^4.2.7"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
django-cloudinary-storage = "^0.3.0"
requests = "^2.31.0"
sphinx = "^7.2.6"
black = "^23.11.0"
beautifulsoup4 = "^4.12.2"
sphinx-rtd-theme = "^1.3.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
openai = "^1.2.4"
langchain = "^0.0.335"
setuptools = "~=59.5.0"
python-dotenv = "*"
gunicorn = "^21.2.0"
environ = "^1.0"
pypdf2 = "^3.0.1"
docx2txt = "^0.8"
python-pptx = "^0.6.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
